don't track built files

--- a/Poster/poster.bib
+++ b/Poster/poster.bib
@@ -72,3 +72,17 @@
 	year = {2016},
 	pages = {46-59}
 }
+
+@misc{huff_2018,
+    title = {Closed {Nuclear} {Fuel} {Cycle} {Flowsheet}},
+    url = {https://figshare.com/articles/Closed_Nuclear_Fuel_Cycle_Flowsheet/5765898},
+    abstract = {This diagram of the nuclear fuel cycle indicates the fuel form passed between each stage. Stages include mining, milling, conversion, enrichment, fuel fabrication, transmutation in the reactor, reprocessing, storage, and ultimate disposal in a repository.},
+    urldate = {2018-01-07},
+    publisher = {figshare},
+    author = {Huff, Kathryn D.},
+    month = jan,
+    year = {2018},
+    note = {DOI: 10.6084/m9.figshare.5765898.v1},
+    keywords = {nuclear, repository, milling, enrichment, storage, conversion, fuel cycles, fuel fabrication, mining, reactor, reprocessing},
+    file = {Figshare Snapshot:/Users/khuff/Zotero/storage/LTZ5QRRX/5765898.pdf:application/pdf}
+}
