future work in alert block

--- a/Poster/poster.tex
+++ b/Poster/poster.tex
@@ -171,15 +171,6 @@ presents an opportunity for diversion and proliferation.
 		\caption{Example nuclear fuel cycle with diversion element \cite{Yilmaz_2016}}
 	\end{figure}
 
-        \begin{alertblock}{PLACEHOLDER FOR SHADOW GRAPHIC}
-	\begin{itemize}
-%		\setlength\itemsep{1em}
-		\item {\large Probabilistic search into the objective function or constraint models}
-		\item {\large Uncertainty in addition to mean}
-		\item {\large Uses random samples from probability distributions}
-		\item {\large E.g. Markov Switching-Model, Gaussian Process Regression}
-	\end{itemize}
-        \end{alertblock}
 
 %----------------------------------------------------------------------------------------
 
@@ -270,7 +261,8 @@ equates to the greatest decrease in risk.
 %	FUTURE WORK
 %----------------------------------------------------------------------------------------
 
-\begin{block}{Future Work}
+        \begin{alertblock}{Future Work}
+	\begin{itemize}
 	The goal of this poster is to outline the ground work done and review previous material on diversion, particularly related
 	to pyroprocessing. What needs to be accomplished proceeding this work is as follows:
 	\begin{itemize}
@@ -283,7 +275,7 @@ equates to the greatest decrease in risk.
 	information. Previously mentioned observables such as decay heat or smoke production are not well suited for
 	Cyclus \cite{Huff_2016}, therefore data such as power draw or possibly transportation times and frequency will be explored 
 	instead \cite{Hou_2016}.
-\end{block}
+        \end{alertblock}
 
 
 %--------------------------------------------------------
