--- a/Poster/timeline.tex
+++ b/Poster/timeline.tex
@@ -6,15 +6,15 @@
 \color{gray}
 \rule{\linewidth}{1pt}
 \ytl{Jan.~2018}{Project start: \hfill Literature Review.}
-\ytl{Feb.~2018}{Data collection: \hfill \textbf{?}}
-\ytl{Mar.~2018}{Data collection: \hfill \textbf{?}}
-\ytl{May.~2018}{Model development: \hfill \textbf{?}}
-\ytl{Jun.~2018}{Data collection: \hfill \textbf{?}}
-\ytl{Jul.~2018}{Data collection: \hfill \textbf{?}}
-\ytl{Aug.~2018}{Data collection: \hfill \textbf{?}}
-\ytl{Sep.~2018}{Scenario simulation: \hfill \textbf{?}}
-\ytl{Oct.~2018}{Scenario simulation: \hfill \textbf{?}}
-\ytl{Dec.~2018}{Scenario simulation: \hfill \textbf{?}}
+\ytl{Feb.~2018}{Model development: \hfill Pyro Separations}
+\ytl{Mar.~2018}{Data collection: \hfill Pyro Separations}
+\ytl{May.~2018}{Model development: \hfill Cyclus Pyroprocess}
+\ytl{Jun.~2018}{Model development: \hfill Build Archetype}
+\ytl{Jul.~2018}{Model development: \hfill Signatures Class}
+\ytl{Aug.~2018}{Data collection: \hfill Cyclus Simulation}
+\ytl{Sep.~2018}{Scenario simulation: \hfill Prior Observables}
+\ytl{Oct.~2018}{Scenario simulation: \hfill Proposed Observables}
+\ytl{Dec.~2018}{Scenario simulation: \hfill Vary algorithm}
 %\ytl{~~~~~}{~~~~}
 \rule{\linewidth}{1pt}%
 \\%
