--- a/Poster/fc-diagram.tex
+++ b/Poster/fc-diagram.tex
@@ -33,8 +33,8 @@
   \node (cask)    [process, below of=pool] {Dry Cask Storage};
   \node (reprocess)    [greenbox, right of=reactor, xshift=2cm] {Separation and\\Reprocessing};
   \node (repository) [bluebox, below of=cask, yshift=1.5cm] {Repository}; 
-  \node (pdivert)    [redbox, right of=enr, xshift=4.25cm] {Diverted Pu};
-  \node (heudivert)  [redbox, left of=fuelfab, xshift=-2.25cm] {Diverted HEU};
+  \node (pdivert)    [redbox, right of=enr, xshift=2cm] {Diverted Pu};
+  \node (heudivert)  [redbox, right of=conv, xshift=2cm] {Diverted HEU};
   % Specification of lines between nodes specified above
   % with aditional nodes for description 
 \draw[->]     (leach) |- (mill) node[midway] {unpurified\\$U_3O_8$};
@@ -51,8 +51,8 @@
   \draw [->] (reprocess.west) -- ++(-0.25,0) -- node[yshift=-1cm] 
   {recycling\\waste} ++ (0,-7.5) -- (repository.0);
   \draw [->] (reprocess.north) |- node[midway] {Pu and U}  (fuelfab.east);
-  \draw [->] (reprocess.east) -- ++(0.25,0) -- ++(0,5) (pdivert.south);
-  \draw [->] (enr.west) -- ++(-4,0) -- (heudivert.north);
+  \draw [->] (reprocess.east) -- ++(0.25,0) |- (pdivert.east);
+  \draw [->] (enr.east) -- ++(1,0) -- ++(0,3.0) -- (heudivert.west);
   %\draw[->] (reactor.east) -- ++(2.6,0) -- ++(0,2) -- ++(0,2) --                
   %   node[xshift=1.2cm,yshift=-1.5cm, text width=2.5cm]
   %   {The activity comes to the foreground}(fuelfab.east);
