--- a/Poster/poster.tex
+++ b/Poster/poster.tex
@@ -95,11 +95,11 @@ minimum height=2em]
 %----------------------------------------------------------------------------------------
 
 \title{
-	\includegraphics[width=0.3\linewidth]{NC_State_Logo.png}
+	\includegraphics[width=0.3\linewidth]{UIUC_Logo}
 	\hspace{30cm}
 	\vspace{2cm}
 	\includegraphics[width=0.3\linewidth]{cnec_logo.png} \\
-	Signatures and Observables of Nuclear Fuel Cycle
+	Signatures and Observables of the Nuclear Fuel Cycle
 } % Poster title
 
 \author{\textbf{Gregory T. Westphal}, Kathryn D. Huff}
@@ -148,11 +148,8 @@ minimum height=2em]
 
 \begin{block}{Background}
 
-Figure 1 shows a closed nuclear fuel cycle in which each process facility 
-presents an opportunity for diversion and proliferation.
-
 \begin{figure}
-	\includegraphics[width=1\linewidth]{fc-diagram.pdf}
+	\includegraphics[width=0.9\linewidth]{fc-diagram.pdf}
 %	\includegraphics[width=1.0\linewidth]{fuel_cycle2.png}
         %\input{fc-diagram}
 	\caption{Typical Nuclear fuel cycle without diversion \cite{huff_2018}.}
@@ -234,8 +231,7 @@ The first proposed method uses maximum likelihood estimation to determine unrepo
 	\includegraphics{Hou_Network.png}
 	\caption{Maximum Likelihood Estimation nodal representation proposed by Hou et al\cite{Hou_2016}.}
 \end{figure}
-Figure 4 is a visual representation of a maximum likelihood network. The second approach instead assumes a Poisson 
-distribution \cite{Yilmaz_2016}. Combining these properties, expected values are derived using distributions for enrichments and shipment speeds. \\
+The second approach instead assumes a Poisson distribution \cite{Yilmaz_2016}. Combining these properties, expected values are derived using distributions for enrichments and shipment speeds. \\
 \vspace{10mm}
 Prior work also exists in prevention of shadow fuel cycles through analysis of varying plant archetypes \cite{Rossi_2016}. Rossi concludes that changing the material type such that technical difficulty is increased decrease in risk.
 \end{block}
