--- a/Poster/poster.tex
+++ b/Poster/poster.tex
@@ -161,14 +161,14 @@ minimum height=2em]
 %	Cyclus
 %----------------------------------------------------------------------------------------
 
-\begin{block}{Cyclus}\end{block}
+\begin{block}{Cyclus}
 
-	\begin{figure}
-		\includegraphics[width=0.9\linewidth]{Cyclus_graph}
-		\caption{Cyclus API allows for modular build of simulations \cite{huff_2018}}
-	\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\linewidth]{Cyclus_graph}
+	\caption{Cyclus API allows for modular build of simulations \cite{huff_2018}}
+\end{figure}
 
-
+\end{block}
 %----------------------------------------------------------------------------------------
 
 \end{column} % End of the first column
@@ -218,22 +218,13 @@ minimum height=2em]
 %	PREVIOUS WORK
 %----------------------------------------------------------------------------------------
 
-\begin{block}{Previous Work}
-Two new approaches to online diversion detection have recently been proposed \cite{Hou_2016,Yilmaz_2016}. Which rely on  power demand signatures. To facilitate online detection properties are as follows \cite{Yilmaz_2016}:
+\begin{block}{Archetype Design}
 
-\begin{itemize}
-		\item Product enrichment
-		\item Frequency of shipments
-		\item Time to production
-	\end{itemize}
-The first proposed method uses maximum likelihood estimation to determine unreported routes of transport \cite{Hou_2016}. 
 \begin{figure}
-	\includegraphics{Hou_Network.png}
-	\caption{Maximum Likelihood Estimation nodal representation proposed by Hou et al\cite{Hou_2016}.}
+	\includegraphics[width=1\linewidth]{flowchart}
+	\caption{Pyroprocessing material flowchart designed for a \Cyclus archetype.}
 \end{figure}
-The second approach instead assumes a Poisson distribution \cite{Yilmaz_2016}. Combining these properties, expected values are derived using distributions for enrichments and shipment speeds. \\
-\vspace{10mm}
-Prior work also exists in prevention of shadow fuel cycles through analysis of varying plant archetypes \cite{Rossi_2016}. Rossi concludes that changing the material type such that technical difficulty is increased decrease in risk.
+
 \end{block}
 
 %----------------------------------------------------------------------------------------
