--- a/Poster/poster.tex
+++ b/Poster/poster.tex
@@ -203,12 +203,11 @@ minimum height=2em]
 \end{block}
 \begin{block}{Indirect}		
 	\begin{itemize}
-		\item \textbf{Power Draw:} Sign of overusing centrifuges \cite{Yilmaz_2016,Hou_2016}.
-		\item \textbf{Smoke Production:} Reactor producing high power than rated or reported for possible
-		nefarious reasons \cite{Yilmaz_2016}.
-		\item \textbf{Decay Heat:} Lower decay heat in casks signifies over-reporting of waste \cite{Kemp_2016}.
-		\item \textbf{Trace Quantities:} $^{135}$Xe and $^{85}$Kr are commonly emitted through processing along with tritium
-		from reactors. Need sensitive equipment but difficult to hide \cite{Borrelli_2017,Kemp_2016}.
+		\item \textbf{Power Draw:} Sign of increased current or voltage at the electroreduction or electrowinning processes \cite{Yilmaz_2016,Hou_2016,lee_advanced_nodate,koyama_development_2012}.
+		\item \textbf{Facility Size:} Throughput is, in part, limited by batch size; the footprint of the facility would
+		increase from expanding batch size.
+		\item \textbf{Decay Heat:} Lower decay heat in casks signifies over-reporting of waste, particularly metal fission products, $^{90}$Sr and Cs \cite{flowsheet_1998,Borrelli_2017,lee_korean_2011}.
+		\item \textbf{Thermal Image:} Facilities are more efficient at higher temperatures \cite{chapman_revision_1984,flowsheet_1998}.
 	\end{itemize}
 \end{block}
 \end{block}
